# mcp-aws-yolo

./: .env.example  .gitignore  LICENSE  README.md  aws_config.json  aws_mcp_todo.md  compose.yml  mcp_registry.json  pyproject.toml  setup.py
src/mcp_aws_yolo/: config.py  llm_client.py  main.py  mcp_client.py  registry.py  vector_store.py
