[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-aws-yolo"
version = "0.1.0"
description = "Local AI MCP server with LLM and vector store for intelligent tool routing"
authors = [
    {name = "brian", email = "0xnairb@gmail.com"},
]
dependencies = [
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.10.1",
    "pydantic>=2.11.7",
    "mcp>=1.12.4",
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "httpx>=0.28.1",
    "qdrant-client>=1.15.1",
    "sentence-transformers>=5.1.0",
    "litellm>=1.75.5.post1",
    "numpy>=2.2.6",
    "ollama>=0.5.3",
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.9.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.6.0",
]

[project.scripts]
mcp-aws-yolo = "src.mcp_aws_yolo.main:main"

[tool.hatch.version]
path = "src/mcp_aws_yolo/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_aws_yolo"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
